# lightnovel-crawler

./: .gitignore  Dockerfile  Makefile  __main__.py  docker-compose.yml  flake.nix  project.nix  pyproject.toml  requirements.txt  requirements_dev.txt  sonar-project.properties
.github/workflows/: docker-publish.yml  dockerimage.yml  dockerimagearm.yml  dockerimagelatest.yml  main.yml  upstream-sync.yml
lncrawl/assets/: icons.py
lncrawl/bots/: telegram.py
lncrawl/bots/console/: output_style.py
lncrawl/bots/telegram/: __init__.py
lncrawl/core/: app.py  arguments.py  scraper.py
lncrawl/sources/: bestlightnovel.py  mtlednovels.py  novelonlinefull.py  novelplanet.py  royalroad.py  yukinovel.py
scripts/: Dockerfile
src/assets/: html_style.css  html_style.py  icons.py
src/bots/: __init__.py  console.py  slack.py  slackclient.py  slackclient_messages.py  telegram.py
src/bots/console/: output_style.py
src/core/: __init__.py  arguments.py  display.py  downloader.py
src/sources/: bestlightnovel.py  mtlednovels.py  novelonlinefull.py  novelplanet.py  royalroad.py  yukinovel.py
src/spiders/: bestlightnovel.py  mtlednovels.py  novelonlinefull.py  novelplanet.py  royalroad.py  yukinovel.py
src/utils/: crawler.py  kindlegen_download.py
